--- a/app/views/settings/day_sequences/_form.html.haml
+++ b/app/views/settings/day_sequences/_form.html.haml
@@ -1,20 +1,25 @@
+%h2 Add Holiday, Vacation and Absence
 -if @day_sequence.errors.any?
 	#error_explanation
 		%h2= "#{pluralize(@day_sequence.errors.count, "error")} prohibited this user from being saved:"
 		%ul
 			- @day_sequence.errors.full_messages.each do |msg|
 				%li= msg
-%ul
-	%li.third
-		= f.label :date, "Sequence Type"
-		= select_tag(:type, options_for_select([["Holiday", "1"], ["Vacation", "2"], ["Absence", "3"]]), :class => "half")
-	%li.third
-		= f.label :date, "Date from"
-		= f.text_field :date_from
-	%li.third
-		= f.label :date, "Date to"
-		= f.text_field :date_to
-	%li
-		= f.label :user_id, "User (unless holiday)"
-		= select_tag(:user_id, options_for_select(User.all.map {|u| ["#{u.firstname.first}. #{u.lastname}", u.id] }))
-	%li= f.submit "Save Day", :class => "submit"
+%dl
+	%dt= f.label :date, "Sequence Type"
+	%dd= f.select(:type_of_sequence, options_for_select([["Holiday", "1"], ["User Vacation", "2"], ["User Absence", "3"]]), :class => "half")
+	%dt.small= f.label :date_from, "Date from"
+	%dd.small= f.text_field :date_from
+	%dt.small= f.label :date_to, "Date to"
+	%dd.small= f.text_field :date_to
+	.clear
+	%dt= f.label :user_id, "User (!holiday)"
+	%dd= f.select(:user_id, options_for_select(User.all.map {|u| ["#{u.firstname.first}. #{u.lastname}", u.id] }))
+	%dt.small= f.label :verified
+	%dd
+		= f.radio_button :verified, 1, :class => "radio"
+		True
+		= f.radio_button :verified, 0, :class => "radio"
+		False
+	.clear
+= f.submit "Save Sequence", :class => "submit"
